--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Contact
+title: 联系
 image: 13.jpg
 ---
 {% if site.contact-subtitle %}
@@ -8,7 +8,7 @@ image: 13.jpg
 <hr>
 {% else %}
 {% endif %}
-<form action="https://formspree.io/{{ site.author-email }}" method="POST" class="form">
+<form action="https://mayaurora.github.io/{{ site.author-email }}" method="POST" class="form">
   <div class="form-group">
     <label for="form-name">Your Name (Required)</label>
     <input class="form-input" type="text" name="name" id="form-name" required>
